--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+<!-- do I do anything else with viewport? -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -8,6 +10,14 @@
   </head>
   <body>
     <section class="container">
+
+<!-- images here? should I resize in html or css? class - medium or...? help -->
+
+       <img src="images/baku.jpg" class="image" alt="Baku" />
+       <img src="images/london.png" class="image" alt="London" />
+       <img src="images/madrid.jpg" class="image" alt="Madrid" />
+       <img src="images/rome.jpg" class="image" alt="Rome" />
+
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
       <div class="preview baku">
         <h1>Baku</h1>
